# BSTU-labs

1,2kurs/c_learning-main/: CMakeLists.txt  dismat.c  main.c
1,2kurs/c_learning-main/data0/: ShellsSort_orderedBackwards_time.csv  ShellsSort_ordered_time.csv  ShellsSort_random_time.csv  bubbleSort_orderedBackwards_time.csv  bubbleSort_ordered_time.csv  bubbleSort_random_time.csv  combSort_orderedBackwards_time.csv  combSort_ordered_time.csv  combSort_random_time.csv  digitalSort_orderedBackwards_time.csv  digitalSort_ordered_time.csv  digitalSort_random_time.csv  insertionSort_orderedBackwards_time.csv  insertionSort_ordered_time.csv  insertionSort_random_time.csv  selectionSort_orderedBackwards_time.csv  selectionSort_ordered_time.csv  selectionSort_random_time.csv
1,2kurs/c_learning-main/data1/: ShellsSort_orderedBackwards_compares.csv  ShellsSort_ordered_compares.csv  ShellsSort_random_compares.csv  bubbleSort_ordered_compares.csv  combSort_orderedBackwards_compares.csv  combSort_ordered_compares.csv  combSort_random_compares.csv  digitalSort_orderedBackwards_compares.csv  digitalSort_random_compares.csv  insertionSort_ordered_compares.csv  insertionSort_random_compares.csv  selectionSort_random_compares.csv
1,2kurs/c_learning-main/libs/: ArrayFunc.c  ArrayFunc.h  Circle.c  Circle.h  OperationOverMatrix.c  OperationOverMatrix.h  OperationOverSet.c  OperationOverSet.h  Point.c  Point.h  Sorts.c  Sorts.h  String_DAA_lib.c  String_DAA_lib.h  TruthTable.c  TruthTable.h  Vector.c  Vector.h  graficOfSinByMemory.c  graficOfSinByMemory.h  specificOperationOverSet.c  specificOperationOverSet.h
1,2kurs/c_learning-main/test_list/: TestList.c  TestList.h
2kurs2sem/: Дмитриев ПВ223 тест по трудовому праву.docx  СЕМЕЙНОЕ ПРАВО Дмитриев ПВ223.docx  тест УП (2).docx
2kurs2sem/InformTheor/lab3/: 2.cpp  2.h  3_1.cpp  3_1.h  3_2.cpp  3_2.h  4.cpp  4.h  5.cpp  5.h  6.cpp  6.h  CMakeLists.txt
2kurs2sem/OOP/lab5/: CMakeLists.txt  main.cpp  Диаграмма без названия.drawio
2kurs2sem/OOP/lab5/headers/function/: Function.h  FunctionManager.h  IOHandler.h  Solver.h
2kurs2sem/OOP/lab5/headers/function/specific/: Hyperbola.h  Line.h  Parabola.h
2kurs2sem/OOP/lab5/sources/function/: Function.cpp  FunctionManager.cpp  IOHandler.cpp  Solver.cpp
2kurs2sem/OOP/lab5/sources/function/specific/: Hyperbola.cpp  Line.cpp  Parabola.cpp
2kurs2sem/SysMod/: СисМод_Дмитриев_ПВ223 (2).doc  Учебное пособие по СИС МОД.doc
3kurs1sem/acs/: run.asm  run_f_run.bat
3kurs1sem/e/: сэкономика.txt
acs/lab1/: test  (+1 more)
cg/lab_3/: CMakeLists.txt  Frame.h  Matrix.h  Painter.h  SawShader.h
cg/lab_3/interpolator/: BaseInterpolator.h
(+555 files in other folders)
